# aidin_humanoid_actuator_dynamic

isaac_lab_for_ik/: README.md  _isaac_lab  joint_states.csv
isaac_lab_for_ik/scripts/: list_envs.py  random_agent.py  zero_agent.py
isaac_lab_for_ik/scripts/aidin_humanoid/: run_diff_ik.py
isaac_lab_for_ik/scripts/rl_games/: play.py  train.py
isaac_lab_for_ik/scripts/rsl_rl/: play.py  train.py
isaac_lab_for_ik/source/isaac_lab_for_ik/: setup.py
isaac_lab_for_ik/source/isaac_lab_for_ik/config/: extension.toml
isaac_lab_for_ik/source/isaac_lab_for_ik/docs/: CHANGELOG.rst
isaac_lab_for_ik/source/isaac_lab_for_ik/isaac_lab_for_ik/: ui_extension_example.py
isaac_lab_for_ik/source/isaac_lab_for_ik/isaac_lab_for_ik/assets/: __init__.py  leg_for_ik.py  leg_parkour.py
isaac_sim/: _isaac_sim  humaniod_aidin.py
ros2_ws/: test.cpp
ros2_ws/src/joint_planner/: CMakeLists.txt
ros2_ws/src/joint_planner/src/: joint_planner_node.cpp
ros2_ws/src/joint_planner/src/StateMachine/: CMakeLists.txt  StateMachine.cpp  StateMachine.h
ros2_ws/src/motor_driver/: CMakeLists.txt
ros2_ws/src/motor_driver/src/: Humanoid_EtherCAT_DC.cpp
ros2_ws/src/non_rt_node/: CMakeLists.txt  package.xml
ros2_ws/src/non_rt_node/src/: main.cpp
ros2_ws/src/ros2_xenomai_bridge/: CMakeLists.txt
ros2_ws/src/ros2_xenomai_bridge/src/: motor_command_subriber.cpp
ros2_ws/src/test_xenomai/: package.xml
ros2_ws/src/test_xenomai/src/: test.cpp
ros2_ws_gene/: .gitignore
ros2_ws_gene/src/joint_planner/: CMakeLists.txt
ros2_ws_gene/src/joint_planner/launch/: joint_planner.launch.py
ros2_ws_gene/src/joint_planner/motion_files/: joint_states.csv
ros2_ws_gene/src/joint_planner/src/: joint_planner_node.cpp
ros2_ws_gene/src/joint_planner/src/ActuatorInterface/: CMakeLists.txt  ROSActuatorInterface.cpp  ROSActuatorInterface.h
ros2_ws_gene/src/joint_planner/src/DataInterface/: CMakeLists.txt  ROSDataInterface.cpp  ROSDataInterface.h  Robot.h
ros2_ws_gene/src/joint_planner/src/EventManager/: EventManager.h
ros2_ws_gene/src/joint_planner/src/Planner/: Planner.cpp  Planner.h
ros2_ws_gene/src/joint_planner/src/StateMachine/: StateMachine.cpp  StateMachine.h
ros2_ws_gene/src/launch_scripts/launch/: test_all.launch.py  test_joint_planner.launch.py
ros2_ws_gene/src/motor_driver/: CMakeLists.txt  package.xml
ros2_ws_gene/src/motor_driver/launch/: motor_driver.launch.py
ros2_ws_gene/src/motor_driver/src/: Humanoid_EtherCAT_DC.h  combine_test.cpp
ros2_ws_gene/src/ros2_xenomai_bridge/: CMakeLists.txt
ros2_ws_gene/src/ros2_xenomai_bridge/src/: motor_command_subscriber.cpp  motor_state_publisher.cpp
ros2_ws_gene/src/test_xenomai/: CMakeLists.txt
ros2_ws_gene/src/test_xenomai/src/: main.cpp  shared_memory.cpp
ros2_ws_robot_state_publisher/src/launch_scripts/: CMakeLists.txt  package.xml
ros2_ws_robot_state_publisher/src/launch_scripts/launch/: robot.launch.py
urdf/: hr.urdf
(+31 files in other folders)
